2007-08-13  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm (generate-wrapset): Make generated
	SCM wrappers use the (gnome gobject) library, which in the change
	to generics.scm is no longer unintentionally exported. Use the
	generics' public interface, not its private interface.

	* gnome/gw/support/modules.scm (export-all-lazy!): 
	* gnome/gw/generics.scm: Instead of making the public interface
	use the module, which unintentionally re-exports imported
	bindings in addition to the local bindings, install a module
	binder proc on the public interface to export only local
	variables.

2007-07-28  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm: Expand and document, depending on
	the latest in guile-lib. I believe the interface is sufficient
	now, at least for guile-cairo's purposes.

2007-07-17  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gtk-doc.scm: Checkpoint some new developments.

2007-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/Makefile.am: 
	* gnome/gw/support/gtk-doc.scm: New module, useful for generating
	docs from gtk-doc-generated docbook. Currently used in
	guile-cairo.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 2.15.93.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/defs.scm (construct-argument-list): Fix parsing
	of argument options like (callee-owned), broken on 2007-05-05.

2007-05-26  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/glib.defs (g_string_get_str): Fix generated
	wrapper name.

	* gnome/gw/support/modules.scm: New function. If we have a fixed
	guile, exports everything to the public interface, with the effect
	that the module binder proc will be active on the public
	interface. However, this causes huge slowdowns on most guile 1.8
	versions; if we detect an old version, export all symbols